# tinylogger

./: CMakeLists.txt  CMakePresets.json  LICENSE  README.md
.github/workflows/: ci.yml
include/tinylogger/: tinylogger.hpp
src/: tinylogger.hpp
tests/: CMakeLists.txt  test_tinylogger.cpp
